--- a/index.html
+++ b/index.html
@@ -1,9 +1,147 @@
 <!DOCTYPE html>
+
 <html>
-    <head>
-        <!-- head definitions go here -->
-    </head>
-    <body>
-        <h1> Pogos Page <h1/>
-    </body>
+
+<head>
+
+  <title>My First Web Page</title>
+
+  <style>
+
+    body {
+
+      font-family: Arial, sans-serif;
+
+      text-align: center;
+
+      margin-top: 50px;
+
+    }
+
+    h1 {
+
+      color: blue;
+
+    }
+
+    p {
+
+      color: rgb(77, 170, 34);
+
+    }
+
+  </style>
+
+</head>
+
+<body>
+
+  <h1>Worldwide LGBT Resources</h1>
+
+  <h2>By:Pongo. Want to add something? Email: pongopawswoof@gmail.com </h2>
+
+  <p>Worldwide LGBT Resources list</p>
+
+</body>Disclaimer:
+This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
+Any products/companies we list don't reflect Trans Academy as a whole. 
+Please use your own discretion and research with any advice listed. 
+Always seek the advice of your qualified health care provider regarding any medical questions. 
+-----------------------------------------------------------------------------------------------------------
+This resource list is for Lgbtqia specific resources. 
+If you would like to add something to this list, please @Pongo on discord. 
+
+
+*You can see me typing, but I can't see where you are in the document. 
+
+
+
+
+Chapters:
+Server Guide
+Crisis Hotlines
+Coping skills
+Resources
+Voice Training
+Classes & Events
+Socially Transitioning
+Passing
+Positivity and Hope
+Voice Training
+Trans academy voice classes
+Voice training resource list
+Voice training app
+Navigating Coming Out & Family support
+How to use Pronouns
+Support groups & Ally resources
+Help navigating Homelessness & financial concerns
+Asylum and refugees, worldwide getting to safety
+LGBT moving funds for safety
+Housing
+Youth-runaway crisis lines
+Food
+Wifi and internet access
+How to find low cost health insurance,grants for funding
+Job skills,resumes,interviews,College scholarships and more
+Medically Transitioning
+HRT- How to guide & safety
+Surgery-Types of procedures,doctors,insurance,grant for funding
+Finding an LGBT friendly resource	
+Doctors & therapists (low income options!)
+LGBT businesses (Hair salons and more)
+Transgender Representation	
+Trans masc 
+Trace app for tracking transition
+Trans fem 
+Nonbinary
+Books on lgbt, books for kids
+Periods-monthly cycle
+Period tracking app, OBGYNs
+Trans masc cycles
+Trans fem have periods too!
+Legal Help for LGBT
+US and name & gender marker change
+UK,Canada and more countries
+General LGBT organizations
+Links to organizations worldwide for events & help
+LGBT Swimsuits and Underwear brands
+Trans Masc Specific Resources
+Binding
+Packing
+STPs
+Clothing,Shoes,Hair,etc
+Surgery & Grants for funding
+Periods
+Tracking apps
+Info & support for afab folks
+Why every trans person needs an OBGYN
+ Lgbt Pregnancy and parenting
+Queer parenting links
+Can trans men get pregnant/prevention 
+Chest feeding for trans masc & trans fem
+Trans parenting in media
+Parenting a trans kid
+Trans Fem specific resources
+Guides
+Hair(wigs,laser removal,etc)
+Makeup(beginner guide)
+Body(clothes,workouts,tucking,etc)
+Chest(bra size guide)
+Surgery & Grants for funding
+Nonbinary&Intersex specific resources
+resource guide
+(more coming soon)
+BIPOC specific resources
+What is intersectionality?
+Worldwide links
+US specific
+Texas BIPOC
+ Asian & Pacific Islander
+Mental Health for BIPOC
+
+
+
+Crisis Hotlines:</body>
+
+
 </html>
