--- a/index.html
+++ b/index.html
@@ -49,14 +49,11 @@ Please use your own discretion and research with any advice listed.
 Always seek the advice of your qualified health care provider regarding any medical questions. 
 -----------------------------------------------------------------------------------------------------------
 This resource list is for Lgbtqia specific resources. 
-If you would like to add something to this list, please @Pongo on discord. 
-
-
-*You can see me typing, but I can't see where you are in the document. 
+If you would like to add something to this list, please @Pongo on discord. </body>
 
 
 
-
+</body>
 Chapters:
 Server Guide
 Crisis Hotlines
