--- a/index.html
+++ b/index.html
@@ -1,147 +1,126 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-
-  <title>My First Web Page</title>
-
-  <style>
-
-    body {
-
-      font-family: Arial, sans-serif;
-
-      text-align: center;
-
-      margin-top: 50px;
-
-    }
-
-    h1 {
-
-      color: blue;
-
-    }
-
-    p {
-
-      color: rgb(77, 170, 34);
-
-    }
-
-  </style>
-
-</head>
-
-<body>
-
-  <h1>Worldwide LGBT Resources</h1>
-
-  <h2>By:Pongo. Want to add something? Email: pongopawswoof@gmail.com </h2>
-
-  <p>Worldwide LGBT Resources list</p>
-
-</body>Disclaimer:
-This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
-Any products/companies we list don't reflect Trans Academy as a whole. 
-Please use your own discretion and research with any advice listed. 
-Always seek the advice of your qualified health care provider regarding any medical questions. 
------------------------------------------------------------------------------------------------------------
-This resource list is for Lgbtqia specific resources. 
-If you would like to add something to this list, please @Pongo on discord. 
+    <head>
+        <title>My First Web Page</title>
+        <style>
+        body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin-top: 50px;
+        }
+        h1 {
+        color: blue;
+        }
+        p {
+        color: rgb(77, 170, 34);
+        }
+        </style>
+    </head>
+    <body>
+        <h1>Worldwide LGBT Resources</h1>
+        <h2>By:Pongo. Want to add something?<br>Email: pongopawswoof@gmail.com </h2>
+        <p>Worldwide LGBT Resources list</p>
+        <p>
+            Disclaimer:
+            This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
+            Any products/companies we list don't reflect Trans Academy as a whole. 
+            Please use your own discretion and research with any advice listed. 
+            Always seek the advice of your qualified health care provider regarding any medical questions. 
+        </p>
+        <p>
+            -----------------------------------------------------------------------------------------------------------
+        <p/>
+        This resource list is for Lgbtqia specific resources. 
+        If you would like to add something to this list, please @Pongo on discord. 
 
 
-*You can see me typing, but I can't see where you are in the document. 
+        *You can see me typing, but I can't see where you are in the document. 
+
+        <h2> Chapters: <h2/>
+        <ol>
+                <li>Server Guide<li/>
+                <li>Crisis Hotlines<li/>
+                <li>Coping skills<li/>
+                <li>Resources<li/>
+                <li>Voice Training<li/>
+                <li>Classes & Events<li/>
+                <li>Socially Transitioning<li/>
+                <li>Passing<li/>
+                <li>Positivity and Hope<li/>
+                <li>Voice Training<li/>
+                <li>Trans academy voice classes<li/>
+                <li>Voice training resource list<li/>
+                <li>Voice training app<li/>
+                <li>Navigating Coming Out & Family support<li/>
+                <li>How to use Pronouns<li/>
+                <li>Support groups & Ally resources<li/>
+                <li>Help navigating Homelessness & financial concerns<li/>
+                <li>Asylum and refugees, worldwide getting to safety<li/>
+                <li>LGBT moving funds for safety<li/>
+                <li>Housing<li/>
+                <li>Youth-runaway crisis lines<li/>
+                <li>Food<li/>
+                <li>Wifi and internet access<li/>
+                <li>How to find low cost health insurance,grants for funding<li/>
+                <li>Job skills,resumes,interviews,College scholarships and more<li/>
+                <li>Medically Transitioning<li/>
+                <li>HRT- How to guide & safety<li/>
+                <li>Surgery-Types of procedures,doctors,insurance,grant for funding<li/>
+                <li>Finding an LGBT friendly resource	<li/>
+                <li>Doctors & therapists (low income options!)<li/>
+                <li>LGBT businesses (Hair salons and more)<li/>
+                <li>Transgender Representation	<li/>
+                <li>Trans masc <li/>
+                <li>Trace app for tracking transition<li/>
+                <li>Trans fem <li/>
+                <li>Nonbinary<li/>
+                <li>Books on lgbt, books for kids<li/>
+                <li>Periods-monthly cycle<li/>
+                <li>Period tracking app, OBGYNs<li/>
+                <li>Trans masc cycles<li/>
+                <li>Trans fem have periods too!<li/>
+                <li>Legal Help for LGBT<li/>
+                <li>US and name & gender marker change<li/>
+                <li>UK,Canada and more countries<li/>
+                <li>General LGBT organizations<li/>
+                <li>Links to organizations worldwide for events & help<li/>
+                <li>LGBT Swimsuits and Underwear brands<li/>
+                <li>Trans Masc Specific Resources<li/>
+                <li>Binding<li/>
+                <li>Packing<li/>
+                <li>STPs<li/>
+                <li>Clothing,Shoes,Hair,etc<li/>
+                <li>Surgery & Grants for funding<li/>
+                <li>Periods<li/>
+                <li>Tracking apps<li/>
+                <li>Info & support for afab folks<li/>
+                <li>Why every trans person needs an OBGYN<li/>
+                <li>Lgbt Pregnancy and parenting<li/>
+                <li>Queer parenting links<li/>
+                <li>Can trans men get pregnant/prevention <li/>
+                <li>Chest feeding for trans masc & trans fem<li/>
+                <li>Trans parenting in media<li/>
+                <li>Parenting a trans kid<li/>
+                <li>Trans Fem specific resources<li/>
+                <li>Guides<li/>
+                <li>Hair(wigs,laser removal,etc)<li/>
+                <li>Makeup(beginner guide)<li/>
+                <li>Body(clothes,workouts,tucking,etc)<li/>
+                <li>Chest(bra size guide)<li/>
+                <li>Surgery & Grants for funding<li/>
+                <li>Nonbinary&Intersex specific resources<li/>
+                <li>resource guide<li/>
+                <li>(more coming soon)<li/>
+                <li>BIPOC specific resources<li/>
+                <li>What is intersectionality?<li/>
+                <li>Worldwide links<li/>
+                <li>US specific<li/>
+                <li>Texas BIPOC<li/>
+                <li>Asian & Pacific Islander<li/>
+                <li>Mental Health for BIPOC<li/>
+        <ol/>
 
 
-
-
-Chapters:
-Server Guide
-Crisis Hotlines
-Coping skills
-Resources
-Voice Training
-Classes & Events
-Socially Transitioning
-Passing
-Positivity and Hope
-Voice Training
-Trans academy voice classes
-Voice training resource list
-Voice training app
-Navigating Coming Out & Family support
-How to use Pronouns
-Support groups & Ally resources
-Help navigating Homelessness & financial concerns
-Asylum and refugees, worldwide getting to safety
-LGBT moving funds for safety
-Housing
-Youth-runaway crisis lines
-Food
-Wifi and internet access
-How to find low cost health insurance,grants for funding
-Job skills,resumes,interviews,College scholarships and more
-Medically Transitioning
-HRT- How to guide & safety
-Surgery-Types of procedures,doctors,insurance,grant for funding
-Finding an LGBT friendly resource	
-Doctors & therapists (low income options!)
-LGBT businesses (Hair salons and more)
-Transgender Representation	
-Trans masc 
-Trace app for tracking transition
-Trans fem 
-Nonbinary
-Books on lgbt, books for kids
-Periods-monthly cycle
-Period tracking app, OBGYNs
-Trans masc cycles
-Trans fem have periods too!
-Legal Help for LGBT
-US and name & gender marker change
-UK,Canada and more countries
-General LGBT organizations
-Links to organizations worldwide for events & help
-LGBT Swimsuits and Underwear brands
-Trans Masc Specific Resources
-Binding
-Packing
-STPs
-Clothing,Shoes,Hair,etc
-Surgery & Grants for funding
-Periods
-Tracking apps
-Info & support for afab folks
-Why every trans person needs an OBGYN
- Lgbt Pregnancy and parenting
-Queer parenting links
-Can trans men get pregnant/prevention 
-Chest feeding for trans masc & trans fem
-Trans parenting in media
-Parenting a trans kid
-Trans Fem specific resources
-Guides
-Hair(wigs,laser removal,etc)
-Makeup(beginner guide)
-Body(clothes,workouts,tucking,etc)
-Chest(bra size guide)
-Surgery & Grants for funding
-Nonbinary&Intersex specific resources
-resource guide
-(more coming soon)
-BIPOC specific resources
-What is intersectionality?
-Worldwide links
-US specific
-Texas BIPOC
- Asian & Pacific Islander
-Mental Health for BIPOC
-
-
-
-Crisis Hotlines:</body>
-
-
+        Crisis Hotlines:
+    </body>
 </html>
