--- a/index.html
+++ b/index.html
@@ -2,19 +2,6 @@
 <html>
     <head>
         <title>My First Web Page</title>
-        <style>
-        body {
-        font-family: Arial, sans-serif;
-        text-align: center;
-        margin-top: 50px;
-        }
-        h1 {
-        color: blue;
-        }
-        p {
-        color: rgb(77, 170, 34);
-        }
-        </style>
     </head>
     <body>
         <h1>Worldwide LGBT Resources</h1>
@@ -37,90 +24,92 @@
         *You can see me typing, but I can't see where you are in the document. 
 
         <h2> Chapters: <h2/>
-        <ol>
-                <li>Server Guide<li/>
-                <li>Crisis Hotlines<li/>
-                <li>Coping skills<li/>
-                <li>Resources<li/>
-                <li>Voice Training<li/>
-                <li>Classes & Events<li/>
-                <li>Socially Transitioning<li/>
-                <li>Passing<li/>
-                <li>Positivity and Hope<li/>
-                <li>Voice Training<li/>
-                <li>Trans academy voice classes<li/>
-                <li>Voice training resource list<li/>
-                <li>Voice training app<li/>
-                <li>Navigating Coming Out & Family support<li/>
-                <li>How to use Pronouns<li/>
-                <li>Support groups & Ally resources<li/>
-                <li>Help navigating Homelessness & financial concerns<li/>
-                <li>Asylum and refugees, worldwide getting to safety<li/>
-                <li>LGBT moving funds for safety<li/>
-                <li>Housing<li/>
-                <li>Youth-runaway crisis lines<li/>
-                <li>Food<li/>
-                <li>Wifi and internet access<li/>
-                <li>How to find low cost health insurance,grants for funding<li/>
-                <li>Job skills,resumes,interviews,College scholarships and more<li/>
-                <li>Medically Transitioning<li/>
-                <li>HRT- How to guide & safety<li/>
-                <li>Surgery-Types of procedures,doctors,insurance,grant for funding<li/>
-                <li>Finding an LGBT friendly resource	<li/>
-                <li>Doctors & therapists (low income options!)<li/>
-                <li>LGBT businesses (Hair salons and more)<li/>
-                <li>Transgender Representation	<li/>
-                <li>Trans masc <li/>
-                <li>Trace app for tracking transition<li/>
-                <li>Trans fem <li/>
-                <li>Nonbinary<li/>
-                <li>Books on lgbt, books for kids<li/>
-                <li>Periods-monthly cycle<li/>
-                <li>Period tracking app, OBGYNs<li/>
-                <li>Trans masc cycles<li/>
-                <li>Trans fem have periods too!<li/>
-                <li>Legal Help for LGBT<li/>
-                <li>US and name & gender marker change<li/>
-                <li>UK,Canada and more countries<li/>
-                <li>General LGBT organizations<li/>
-                <li>Links to organizations worldwide for events & help<li/>
-                <li>LGBT Swimsuits and Underwear brands<li/>
-                <li>Trans Masc Specific Resources<li/>
-                <li>Binding<li/>
-                <li>Packing<li/>
-                <li>STPs<li/>
-                <li>Clothing,Shoes,Hair,etc<li/>
-                <li>Surgery & Grants for funding<li/>
-                <li>Periods<li/>
-                <li>Tracking apps<li/>
-                <li>Info & support for afab folks<li/>
-                <li>Why every trans person needs an OBGYN<li/>
-                <li>Lgbt Pregnancy and parenting<li/>
-                <li>Queer parenting links<li/>
-                <li>Can trans men get pregnant/prevention <li/>
-                <li>Chest feeding for trans masc & trans fem<li/>
-                <li>Trans parenting in media<li/>
-                <li>Parenting a trans kid<li/>
-                <li>Trans Fem specific resources<li/>
-                <li>Guides<li/>
-                <li>Hair(wigs,laser removal,etc)<li/>
-                <li>Makeup(beginner guide)<li/>
-                <li>Body(clothes,workouts,tucking,etc)<li/>
-                <li>Chest(bra size guide)<li/>
-                <li>Surgery & Grants for funding<li/>
-                <li>Nonbinary&Intersex specific resources<li/>
-                <li>resource guide<li/>
-                <li>(more coming soon)<li/>
-                <li>BIPOC specific resources<li/>
-                <li>What is intersectionality?<li/>
-                <li>Worldwide links<li/>
-                <li>US specific<li/>
-                <li>Texas BIPOC<li/>
-                <li>Asian & Pacific Islander<li/>
-                <li>Mental Health for BIPOC<li/>
-        <ol/>
+            <ol>
+                <li>Server Guide</li>
+                <ol> 
+                    <li>Crisis Hotlines</li>
+                    <li>Coping skills</li>
+                    <li>Resources</li>
+                    <li>Voice Training</li>
+                    <li>Classes & Events</li>
+                </ol>
+                <li>Socially Transitioning</li>
+                <li>Passing</li>
+                <li>Positivity and Hope</li>
+                <li>Voice Training</li>
+                <li>Trans academy voice classes</li>
+                <li>Voice training resource list</li>
+                <li>Voice training app</li>
+                <li>Navigating Coming Out & Family support</li>
+                <li>How to use Pronouns</li>
+                <li>Support groups & Ally resources</li>
+                <li>Help navigating Homelessness & financial concerns</li>
+                <li>Asylum and refugees, worldwide getting to safety</li>
+                <li>LGBT moving funds for safety</li>
+                <li>Housing</li>
+                <li>Youth-runaway crisis lines</li>
+                <li>Food</li>
+                <li>Wifi and internet access</li>
+                <li>How to find low cost health insurance,grants for funding</li>
+                <li>Job skills,resumes,interviews,College scholarships and more</li>
+                <li>Medically Transitioning</li>
+                <li>HRT- How to guide & safety</li>
+                <li>Surgery-Types of procedures,doctors,insurance,grant for funding</li>
+                <li>Finding an LGBT friendly resource	</li>
+                <li>Doctors & therapists (low income options!)</li>
+                <li>LGBT businesses (Hair salons and more)</li>
+                <li>Transgender Representation	</li>
+                <li>Trans masc </li>
+                <li>Trace app for tracking transition</li>
+                <li>Trans fem </li>
+                <li>Nonbinary</li>
+                <li>Books on lgbt, books for kids</li>
+                <li>Periods-monthly cycle</li>
+                <li>Period tracking app, OBGYNs</li>
+                <li>Trans masc cycles</li>
+                <li>Trans fem have periods too!</li>
+                <li>Legal Help for LGBT</li>
+                <li>US and name & gender marker change</li>
+                <li>UK,Canada and more countries</li>
+                <li>General LGBT organizations</li>
+                <li>Links to organizations worldwide for events & help</li>
+                <li>LGBT Swimsuits and Underwear brands</li>
+                <li>Trans Masc Specific Resources</li>
+                <li>Binding</li>
+                <li>Packing</li>
+                <li>STPs</li>
+                <li>Clothing,Shoes,Hair,etc</li>
+                <li>Surgery & Grants for funding</li>
+                <li>Periods</li>
+                <li>Tracking apps</li>
+                <li>Info & support for afab folks</li>
+                <li>Why every trans person needs an OBGYN</li>
+                <li>Lgbt Pregnancy and parenting</li>
+                <li>Queer parenting links</li>
+                <li>Can trans men get pregnant/prevention </li>
+                <li>Chest feeding for trans masc & trans fem</li>
+                <li>Trans parenting in media</li>
+                <li>Parenting a trans kid</li>
+                <li>Trans Fem specific resources</li>
+                <li>Guides</li>
+                <li>Hair(wigs,laser removal,etc)</li>
+                <li>Makeup(beginner guide)</li>
+                <li>Body(clothes,workouts,tucking,etc)</li>
+                <li>Chest(bra size guide)</li>
+                <li>Surgery & Grants for funding</li>
+                <li>Nonbinary&Intersex specific resources</li>
+                <li>resource guide</li>
+                <li>(more coming soon)</li>
+                <li>BIPOC specific resources</li>
+                <li>What is intersectionality?</li>
+                <li>Worldwide links</li>
+                <li>US specific</li>
+                <li>Texas BIPOC</li>
+                <li>Asian & Pacific Islander</li>
+                <li>Mental Health for BIPOC</li>
+                <ol/>
 
 
-        Crisis Hotlines:
+                Crisis Hotlines:
     </body>
 </html>
