--- a/pages/index.html
+++ b/pages/index.html
@@ -19,11 +19,11 @@ If you would like to add something to this list, please @Pongo on discord.
 
 <h2> Chapters: <h2/>
 <ol>
-<li>Server Guide</li>
+<li><a href="/server_guideline">Server Guide</a></li>
 <ol> 
-    <li>Crisis Hotlines</li>
+    <li><a href="/server_guideline#crisis_hotlines">Crisis Hotlines</a></li>
     <ol> 
-        <li>Coping skills</li>
+        <li><a href="/server_guideline#basic_coping_skills">Coping skills</a></li>
     </ol>
     <li>Resources</li>
     <li>Voice Training</li>
