trying out hyperlinks again

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ If you would like to add something to this list, please @Pongo on discord.
 
 <h2> Chapters: <h2/>
 <ol>
-<li><a href="/Worldwide-LGBT-Resources/server_guideline">Server Guide</a></li>
+<li><a href="./server_guideline">Server Guide</a></li>
 <ol> 
-    <li><a href="/Worldwide-LGBT-Resources/server_guideline#crisis_hotlines">Crisis Hotlines</a></li>
+    <li><a href="./server_guideline#crisis_hotlines">Crisis Hotlines</a></li>
     <ol> 
-        <li><a href="/Worldwide-LGBT-Resources/server_guideline#basic_coping_skills">Coping skills</a></li>
+        <li><a href="./server_guideline#basic_coping_skills">Coping skills</a></li>
     </ol>
     <li>Resources</li>
     <li>Voice Training</li>
