--- a/pages/server_guide.html
+++ b/pages/server_guide.html
@@ -219,3 +219,22 @@
     I know it's helped me alot. 
 </p>
 
+<h4>Anxiety breathing techniques </h4>
+
+<p>
+    Breathe in, hold, breathe out: <a href="https://tenor.com/view/anxiety-panic-attack-gif-15269229">https://tenor.com/view/anxiety-panic-attack-gif-15269229</a><br>
+    Breathe in, image to focus on: <a href="https://tenor.com/view/anxiety-gif-25537730">https://tenor.com/view/anxiety-gif-25537730</a><br>
+    This is a breathing technique that is helpful for anxiety. <br>
+    Sometimes something as simple as focusing on breathing can help. I know it sounds silly at first, give it a try.
+</p>
+
+<h4>Try journaling</h4>
+<p>
+    Try journaling your thoughts to get them out of your head and onto paper (:<br>
+    Maslow’s hierarchy of needs shows us that in order to have good mental health, <br>
+    we need our basic needs at the bottom of the pyramid met first.<br>
+    (ex: getting safe housing improves mental health) <br>
+    -See the section on housing & financial help for more resources 
+</p>
+<b> *I'm not a therapist, please see a medical professional </b>
+
