pipoc unstyled done & first build

--- a/bipoc_resources.html
+++ b/bipoc_resources.html
@@ -1,3 +1,9 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>My First Web Page</title>
+    </head>
+    <body>
 <h1>BIPOC specific resources</h1>
 
 <h2>Educational</h2>
@@ -94,3 +100,10 @@
     </li>
 </ul>
 
+<div style="border-style: solid; boder-width: 1%"></div>
+<p style="text-align: center;">
+    Want to add something here? <br>
+    Let @Pongo | <code>awtterpaws_26</code> know on Discord!
+</p>
+    </body>
+</html>
