--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     </head>
     <body>
 <h1>Worldwide LGBT Resources</h1>
-<b>By:Pongo. Want to add something?<br>Email: pongopawswoof@gmail.com </b>
-<p>Worldwide LGBT Resources list</p>
 <p>
     Disclaimer:
     This advice is based on our lived experience, we are not doctors/therapists/lawyers/experts.
@@ -21,10 +19,8 @@ This resource list is for Lgbtqia specific resources.
 If you would like to add something to this list, please @Pongo on discord. 
 
 
-
 <h2> Chapters: <h2/>
-
-<ol> 
+<ol>
     <li><a href="./server_guide#crisis_hotlines">Crisis Hotlines</a></li>
     <ol> 
         <li><a href="./server_guide#basic_coping_skills">Coping skills</a></li>
@@ -144,5 +140,10 @@ If you would like to add something to this list, please @Pongo on discord.
 <ol/>
 
 
+<div style="border-style: solid; boder-width: 1%"></div>
+<p style="text-align: center;">
+    Want to add something here? <br>
+    Let @Pongo | <code>awtterpaws_26</code> know on Discord!
+</p>
     </body>
 </html>
