linked up Bipoc

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,131 +6,232 @@
     Please use your own discretion and research with any advice listed. 
     Always seek the advice of your qualified health care provider regarding any medical questions. 
 </p>
-<p>
-    -----------------------------------------------------------------------------------------------------------
-<p/>
+
+<div style="width:100%; height:1px; background-color:#000000;"></div>
+
 This resource list is for Lgbtqia specific resources. 
 If you would like to add something to this list, please @Pongo on discord. 
 
 
-<h2> Chapters: <h2/>
+<h2> Chapters: </h2>
 <ol>
-    <li><a href="./server_guide#crisis_hotlines">Crisis Hotlines</a></li>
-    <ol> 
-        <li><a href="./server_guide#basic_coping_skills">Coping skills</a></li>
-    </ol>
-    <li>Resources</li>
-    <li>Voice Training</li>
-    <li>Classes & Events</li>
+    <li>
+        <!-- TODO: name of this section -->
+        <ol>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./server_guide.html#crisis_hotlines">
+                        Crisis Hotlines
+                    </a>
+                </h4>
+            </li>
+            <ol> 
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./server_guide.html#basic_coping_skills">
+                            Coping skills
+                        </a>
+                    </h5>
+                </li>
+            </ol>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./server_guide.html">Resources</a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./server_guide.html">Voice Training</a> 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./server_guide.html">Classes & Events</a> 
+                </h4>
+            </li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Socially Transitioning</h3> 
+        <ol> 
+            <li><h4 style="margin: 0px;">Passing</h4></li>
+            <li><h4 style="margin: 0px;">Positivity and Hope</h4></li>
+            <li><h4 style="margin: 0px;">Voice Training</h4></li>
+            <ol> 
+                <li><h5 style="margin: 0px;">Trans academy voice classes</h5></li>
+                <li><h5 style="margin: 0px;">Voice training resource list</h5></li>
+                <li><h5 style="margin: 0px;">Voice training app</h5></li>
+            </ol>
+            <li><h4 style="margin: 0px;">Navigating Coming Out & Family support</h4></li>
+            <li><h4 style="margin: 0px;">How to use Pronouns</h4></li>
+            <li><h4 style="margin: 0px;">Support groups & Ally resources</h4></li>
+            <li><h4 style="margin: 0px;">Help navigating Homelessness & financial concerns</h4></li>
+            <ol> 
+                <li><h5 style="margin: 0px;">Asylum and refugees, worldwide getting to safety</h5></li>
+                <li><h5 style="margin: 0px;">LGBT moving funds for safety</h5></li>
+                <li><h5 style="margin: 0px;">Housing</h5></li>
+                <li><h5 style="margin: 0px;">Youth-runaway crisis lines</h5></li>
+                <li><h5 style="margin: 0px;">Food</h5></li>
+                <li><h5 style="margin: 0px;">Wifi and internet access</h5></li>
+                <li><h5 style="margin: 0px;">How to find low cost health insurance,grants for funding</h5></li>
+                <li><h5 style="margin: 0px;">Job skills, resumes, interviews, College scholarships and more</h5></li>
+            </ol>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Medically Transitioning</h3> 
+        <ol>
+            <li><h4 style="margin: 0px;">HRT - How to guide & safety</h4></li>
+            <li><h4 style="margin: 0px;">Surgery - Types of procedures, doctors, insurance, grant for funding</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Finding an LGBT friendly resource</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Doctors & therapists (low income options!)</h4></li>
+            <li><h4 style="margin: 0px;">LGBT businesses (Hair salons and more)</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Transgender Representation</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Trans masc</h4></li>
+            <ol>
+                <li><h5 style="margin: 0px;">Trace app for tracking transition</h5></li>
+            </ol>
+            <li><h4 style="margin: 0px;">Trans fem</h4></li>
+            <li><h4 style="margin: 0px;">Nonbinary</h4></li>
+            <li><h4 style="margin: 0px;">Books on lgbt, books for kids</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Periods - monthly cycle</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Period tracking app, OBGYNs</h4></li>
+            <li><h4 style="margin: 0px;">Trans masc cycles</h4></li>
+            <li><h4 style="margin: 0px;">Trans fem have periods too!</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Legal Help for LGBT</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">US and name & gender marker change</h4></li>
+            <li><h4 style="margin: 0px;">UK,Canada and more countries</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">General LGBT organizations</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Links to organizations worldwide for events & help</h4></li>
+            <li><h4 style="margin: 0px;">LGBT Swimsuits and Underwear brands</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Trans Masc Specific Resources</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Binding</h4></li>
+            <li><h4 style="margin: 0px;">Packing</h4></li>
+            <li><h4 style="margin: 0px;">STPs</h4></li>
+            <li><h4 style="margin: 0px;">Clothing,Shoes,Hair,etc</h4></li>
+            <li><h4 style="margin: 0px;">Surgery & Grants for funding</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Periods</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Tracking apps</h4></li>
+            <li><h4 style="margin: 0px;">Info & support for afab folks</h4></li>
+            <li><h4 style="margin: 0px;">Why every trans person needs an OBGYN</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Lgbt Pregnancy and parenting</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Queer parenting links</h4></li>
+            <li><h4 style="margin: 0px;">Can trans men get pregnant/prevention </h4></li>
+            <li><h4 style="margin: 0px;">Chest feeding for trans masc & trans fem</h4></li>
+            <li><h4 style="margin: 0px;">Trans parenting in media</h4></li>
+            <li><h4 style="margin: 0px;">Parenting a trans kid</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Trans Fem specific resources</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">Guides</h4></li>
+            <li><h4 style="margin: 0px;">Hair(wigs,laser removal,etc)</h4></li>
+            <li><h4 style="margin: 0px;">Makeup(beginner guide)</h4></li>
+            <li><h4 style="margin: 0px;">Body(clothes,workouts,tucking,etc)</h4></li>
+            <li><h4 style="margin: 0px;">Chest(bra size guide)</h4></li>
+            <li><h4 style="margin: 0px;">Surgery & Grants for funding</h4></li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">Nonbinary & Intersex specific resources</h3>
+        <ol>
+            <li><h4 style="margin: 0px;">resource guide</h4></li>
+            <li>(more coming soon)</li>
+        </ol>
+    </li>
+    <li>
+        <h3 style="margin: 0px;">
+            <a href="./bipoc_resources.html">
+                BIPOC specific resources
+            </a>
+        </h3>
+        <ol>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./bipoc_resources.html#bipoc_educational">
+                        What is intersectionality?
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./bipoc_resources.html#bipoc_educational">
+                        Worldwide links
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./bipoc_resources.html#bipoc_us">
+                        US specific
+                    </a>
+                </h4>
+            </li>
+            <ol>
+                <li>
+                    <h5 style="margin: 0px;">
+                        <a href="./bipoc_resources.html#bipoc_texas">
+                            Texas BIPOC
+                        </a>
+                    </h5>
+                </li>
+            </ol>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./bipoc_resources.html#bipoc_asia_pacific">
+                        Asian & Pacific Islander
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./bipoc_resources.html#bipoc_canada">
+                        Canada specific
+                    </a>
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./bipoc_resources.html#bipoc_mental_health">
+                        Mental Health for BIPOC
+                    </a>
+                </h4>
+            </li>
+        </ol>
+    </li>
 </ol>
-<li>Socially Transitioning</li>
-<ol> 
-    <li>Passing</li>
-    <li>Positivity and Hope</li>
-    <li>Voice Training</li>
-    <ol> 
-        <li>Trans academy voice classes</li>
-        <li>Voice training resource list</li>
-        <li>Voice training app</li>
-    </ol>
-    <li>Navigating Coming Out & Family support</li>
-    <li>How to use Pronouns</li>
-    <li>Support groups & Ally resources</li>
-    <li>Help navigating Homelessness & financial concerns</li>
-    <ol> 
-        <li>Asylum and refugees, worldwide getting to safety</li>
-        <li>LGBT moving funds for safety</li>
-        <li>Housing</li>
-        <li>Youth-runaway crisis lines</li>
-        <li>Food</li>
-        <li>Wifi and internet access</li>
-        <li>How to find low cost health insurance,grants for funding</li>
-        <li>Job skills,resumes,interviews,College scholarships and more</li>
-    </ol>
-</ol>
-<li>Medically Transitioning</li>
-<ol>
-    <li>HRT- How to guide & safety</li>
-    <li>Surgery-Types of procedures,doctors,insurance,grant for funding</li>
-</ol>
-<li>Finding an LGBT friendly resource	</li>
-<ol>
-    <li>Doctors & therapists (low income options!)</li>
-    <li>LGBT businesses (Hair salons and more)</li>
-</ol>
-<li>Transgender Representation	</li>
-<ol>
-    <li>Trans masc </li>
-    <ol>
-        <li>Trace app for tracking transition</li>
-    </ol>
-    <li>Trans fem </li>
-    <li>Nonbinary</li>
-    <li>Books on lgbt, books for kids</li>
-</ol>
-<li>Periods - monthly cycle</li>
-<ol>
-    <li>Period tracking app, OBGYNs</li>
-    <li>Trans masc cycles</li>
-    <li>Trans fem have periods too!</li>
-</ol>
-<li>Legal Help for LGBT</li>
-<ol>
-    <li>US and name & gender marker change</li>
-    <li>UK,Canada and more countries</li>
-</ol>
-<li>General LGBT organizations</li>
-<ol>
-    <li>Links to organizations worldwide for events & help</li>
-    <li>LGBT Swimsuits and Underwear brands</li>
-</ol>
-<li>Trans Masc Specific Resources</li>
-<ol>
-    <li>Binding</li>
-    <li>Packing</li>
-    <li>STPs</li>
-    <li>Clothing,Shoes,Hair,etc</li>
-    <li>Surgery & Grants for funding</li>
-</ol>
-<li>Periods</li>
-<ol>
-    <li>Tracking apps</li>
-    <li>Info & support for afab folks</li>
-    <li>Why every trans person needs an OBGYN</li>
-</ol>
-<li>Lgbt Pregnancy and parenting</li>
-<ol>
-    <li>Queer parenting links</li>
-    <li>Can trans men get pregnant/prevention </li>
-    <li>Chest feeding for trans masc & trans fem</li>
-    <li>Trans parenting in media</li>
-    <li>Parenting a trans kid</li>
-</ol>
-<li>Trans Fem specific resources</li>
-<ol>
-    <li>Guides</li>
-    <li>Hair(wigs,laser removal,etc)</li>
-    <li>Makeup(beginner guide)</li>
-    <li>Body(clothes,workouts,tucking,etc)</li>
-    <li>Chest(bra size guide)</li>
-    <li>Surgery & Grants for funding</li>
-</ol>
-<li>Nonbinary & Intersex specific resources</li>
-<ol>
-    <li>resource guide</li>
-    <li>(more coming soon)</li>
-</ol>
-<li>BIPOC specific resources</li>
-<ol>
-    <li>What is intersectionality?</li>
-    <li>Worldwide links</li>
-    <li>US specific</li>
-    <ol>
-        <li>Texas BIPOC</li>
-    </ol>
-    <li>Asian & Pacific Islander</li>
-    <li>Mental Health for BIPOC</li>
-</ol>
-<ol/>
 
 
