--- a/pages/bipoc_resources.html
+++ b/pages/bipoc_resources.html
@@ -1,10 +1,12 @@
 <h1>BIPOC specific resources</h1>
 
-<h2>Educational</h2>
+<h2 id="bipoc_educational">Educational</h2>
 
 <p>
     What is intersectionality? <br>
-    <a href="https://www.youtube.com/watch?v=EXJ4Dbdm1ks">https://www.youtube.com/watch?v=EXJ4Dbdm1ks</a> 
+    <a href="https://www.youtube.com/watch?v=EXJ4Dbdm1ks">
+        https://www.youtube.com/watch?v=EXJ4Dbdm1ks
+    </a> 
 </p>    
 <p>
     How does being LGBT and BIPOC overlap with pride? <br>
@@ -14,31 +16,49 @@
     (TW: stone wall, white privilege,etc)
 </p>
 
-<h3>US</h3>
+<h3 id="bipoc_us">US</h3>
 <p>
-    Organizations by state: <a href="https://marshap.org">https://marshap.org</a>
+    Organizations by state: 
+    <a href="https://marshap.org">
+        https://marshap.org
+    </a>
 </p>
 
-<h4>Texas specific resources</h4>
+<h4 id="bipoc_texas">Texas specific resources</h4>
 
 <ul>
     <li>
-        <a href="https://blacktransmen.org">https://blacktransmen.org</a> and <a href="https://blacktranswomen.org">https://blacktranswomen.org</a> 
+        <a href="https://blacktransmen.org">
+            https://blacktransmen.org
+        </a> 
+        and 
+        <a href="https://blacktranswomen.org">
+            https://blacktranswomen.org
+        </a> 
     </li>
     <li>
-        Housing, clothing, jobs: <a href="https://www.themahoganyproject.org/community-center">https://www.themahoganyproject.org/community-center</a>
+        Housing, clothing, jobs: 
+        <a href="https://www.themahoganyproject.org/community-center">
+            https://www.themahoganyproject.org/community-center
+        </a>
     </li>
     <li>
-        Trans-Latina: <a href="https://www.translatinacoalition.org/local-representation">https://www.translatinacoalition.org/local-representation</a> 
+        Trans-Latina: 
+        <a href="https://www.translatinacoalition.org/local-representation">
+            https://www.translatinacoalition.org/local-representation
+        </a> 
     </li>
     <li>
-        LGBT & AIDs walk Austin: <a href="https://allgo.org/about-us/">https://allgo.org/about-us/</a> 
+        LGBT & AIDs walk Austin: 
+        <a href="https://allgo.org/about-us/">
+            https://allgo.org/about-us/
+        </a> 
     </li>
 </ul>
 
 <div style="width:100%; height:1px; background-color:#000000;"></div>
 
-<h3>Asian & Pacific Islander Resources for LGBT</h3>
+<h3 id="bipoc_asia_pacific">Asian & Pacific Islander Resources for LGBT</h3>
 
 <ul>
     <li>
@@ -51,7 +71,7 @@
     </li>
 </ul>
 
-<h3>Canada</h3>
+<h3 id="bipoc_canada">Canada</h3>
 
 <p>
     <li>
@@ -64,7 +84,7 @@
     </li>
 </p>
 
-<h2>BIPOC Mental Health</h2> 
+<h2 id="bipoc_mental_health">BIPOC Mental Health</h2> 
 <ul>
     <li>
         It gets better project, bipoc youth<br>
