global orgs and swimsuits

--- a/pages/general_lgbt_organizations.html
+++ b/pages/general_lgbt_organizations.html
@@ -1,50 +1,78 @@
+<h1>General LGBT Organizations</h1>
+
 <p>
-    <b>General LGBT Organizations</b><br>
-    <i>* see other sections for specific needs* Use “ctrl” and “F” on keyboard to search keywords.</i>
+    <i>* see other sections for specific needs*</i>
+    Use “ctrl” and “F” on keyboard to search keywords.
 </p>
+
+<h2 id="lgbt_orgs_by_country">Organisations by Country</h2>
+
+<h3 id="lgbt_orgs_by_country_us">US</h3>
+
 <p>
-    <b>US</b> - More coming soon<br>
-    Are you or someone you know living in Florida and need access to “banned books”: 
-    <a href="https://firestorm.coop/bannedbooks.html">https://firestorm.coop/bannedbooks.html</a> 
+    <i>More coming soon</i> 
+</p> 
+
+<p>
+    Are you or someone you know living in Florida and need access to “banned books”: <br>
+    <a href="https://firestorm.coop/bannedbooks.html">https://firestorm.coop/bannedbooks.html</a>  <br>
     This library is sending LGBT books for free to kids in need!
 </p>
 <p>
-    Grant for gender affirming items (youth in southern states, 24 or younger): 
+    Grant for gender affirming items (youth in southern states, 24 or younger):  <br>
     <a href="https://wearefamilycharleston.org/tgncapplication">https://wearefamilycharleston.org/tgncapplication</a> 
 </p>
 <p>
     Organizations by state:<a href="https://marshap.org">https://marshap.org</a> 
 </p>
+
+<!-- TODO: change this header to EUW? --> 
+<h3 id="lgbt_orgs_by_country_uk">UK</h3>
+
 <p>
-    UK-<br>
     <a href="https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/">
-        https://jsis.washington.edu/euwesteurope/cideu-civil-society-inclusion-and-diversity-in-the-european-union/member-state-civil-society-resources/civil-society-organizations-lgbtq/
+        jsis.washington.edu//cideu-civil-society-inclusion-and-diversity-in-the-european-union/
     </a> 
     (europe,uk,beligum,germany,ireland,etc)
 </p>
 <p>
-    Transactual: 
-    <a href="https://transactual.org.uk">https://transactual.org.uk</a> 
+    Transactual:  <br>
+    <a href="https://transactual.org.uk">https://transactual.org.uk</a> <br>
     (accessible “listening” tool on homepage. For HRT, Name changes, and more)
 </p>
+
+<h3 id="lgbt_orgs_by_country_ca">Canada</h3>
+
 <p>
-    Canada - coming soon (see other sections for specifics, or ask pongo)
+    coming soon (see other sections for specifics, or ask pongo)
 </p>
+
+<h3 id="lgbt_orgs_by_country_nz">New Zealand</h3>
+
 <p>
-    New Zealand: RainbowYouth <a href="https://ry.org.nz">https://ry.org.nz</a> 
+    RainbowYouth <a href="https://ry.org.nz">https://ry.org.nz</a> 
 </p>
+
+<h3 id="lgbt_orgs_by_country_au">Australia</h3>
+
 <p>
-    Australia: Minus18 LGBT <a href="https://www.minus18.org.au/events">https://www.minus18.org.au/events</a> 
+    Minus18 LGBT <a href="https://www.minus18.org.au/events">https://www.minus18.org.au/events</a> 
 </p>
+
+<h3 id="lgbt_orgs_by_country_dn">Denmark</h3>
+
 <p>
-    Denmark: <a href="http://quku.dk/other-lgbtqia-organizations-unions-and-associations/">http://quku.dk/other-lgbtqia-organizations-unions-and-associations/</a><br>
+    <a href="http://quku.dk/other-lgbtqia-organizations-unions-and-associations/">
+        http://quku.dk/other-lgbtqia-organizations-unions-and-associations/
+    </a><br>
     (multiple sites listed there)
 </p>
+
+<div style="width:100%; height:1px; background-color:#000000;"></div>
+
+<h2 id="lgbt_swim_and_under_wear">Swimsuits & Underwear Brands</h2>
+
 <p>
-    ________________________________________________________________________
-</p>
-<p>
-    <b>Swimsuits & Underwear Brands</b>
     <ul>
         <li>
             (Masc & Fem options) RubyShines
@@ -77,12 +105,28 @@
             </a> 
         </li>
         <li>
-            OutPlay <a href="https://shopoutplay.com/en-ca">https://shopoutplay.com/en-ca</a> <br>
-            (swimsuits for masc & fem) Chromat <a href="https://chromat.co/collections/swimwear">https://chromat.co/collections/swimwear
+            OutPlay 
+            <a href="https://shopoutplay.com/en-ca">
+                https://shopoutplay.com/en-ca
+            </a> 
         </li>
         <li>
-            (swim for all) BeefCake <a href="https://www.beefcakeswimwear.com/">https://www.beefcakeswimwear.com/</a> <br>
-            (masc-swim & binders) Muunne <a href="https://www.muunne.com/">https://www.muunne.com/</a>
+            (swimsuits for masc & fem) Chromat 
+            <a href="https://chromat.co/collections/swimwear">
+                https://chromat.co/collections/swimwear
+            </a> 
+        </li>
+        <li>
+            (swim for all) BeefCake 
+            <a href="https://www.beefcakeswimwear.com/">
+                https://www.beefcakeswimwear.com/
+            </a>
+        </li>
+        <li>
+            (masc-swim & binders) Muunne 
+            <a href="https://www.muunne.com/">
+                https://www.muunne.com/
+            </a>
         </li>
         <li>
             (trans fem) Tuck Kits- safe for Swim 
@@ -99,7 +143,7 @@
         <li>
             (trans fem underwear) 
             <a href="https://www.tuckituppp.com/product-page/logothick?utm_source=google&utm_medium=wix_google_channel&utm_campaign=freelistings">
-                https://www.tuckituppp.com/product-page/logothick?utm_source=google&utm_medium=wix_google_channel&utm_campaign=freelistings
+                https://www.tuckituppp.com/product-page/logothick
             </a>
         </li>
     </ul>
