--- a/index.html
+++ b/index.html
@@ -68,27 +68,83 @@ If you would like to add something to this list, please @Pongo on discord.
                 <li><h5 style="margin: 0px;">Voice training resource list</h5></li>
                 <li><h5 style="margin: 0px;">Voice training app</h5></li>
             </ol>
-            <li><h4 style="margin: 0px;">Navigating Coming Out & Family support</h4></li>
-            <li><h4 style="margin: 0px;">How to use Pronouns</h4></li>
-            <li><h4 style="margin: 0px;">Support groups & Ally resources</h4></li>
-            <li><h4 style="margin: 0px;">Help navigating Homelessness & financial concerns</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Navigating Coming Out & Family support
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    How to use Pronouns
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Support groups & Ally resources
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Help navigating Homelessness & financial concerns
+                </h4>
+            </li>
             <ol> 
-                <li><h5 style="margin: 0px;">Asylum and refugees, worldwide getting to safety</h5></li>
-                <li><h5 style="margin: 0px;">LGBT moving funds for safety</h5></li>
-                <li><h5 style="margin: 0px;">Housing</h5></li>
-                <li><h5 style="margin: 0px;">Youth-runaway crisis lines</h5></li>
-                <li><h5 style="margin: 0px;">Food</h5></li>
-                <li><h5 style="margin: 0px;">Wifi and internet access</h5></li>
-                <li><h5 style="margin: 0px;">How to find low cost health insurance,grants for funding</h5></li>
-                <li><h5 style="margin: 0px;">Job skills, resumes, interviews, College scholarships and more</h5></li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        Asylum and refugees, worldwide getting to safety
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        LGBT moving funds for safety
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        Housing
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        Youth-runaway crisis lines
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        Food
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        Wifi and internet access
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        How to find low cost health insurance,grants for funding
+                    </h5>
+                </li>
+                <li>
+                    <h5 style="margin: 0px;">
+                        Job skills, resumes, interviews, College scholarships and more
+                    </h5>
+                </li>
             </ol>
         </ol>
     </li>
     <li>
         <h3 style="margin: 0px;">Medically Transitioning</h3> 
         <ol>
-            <li><h4 style="margin: 0px;">HRT - How to guide & safety</h4></li>
-            <li><h4 style="margin: 0px;">Surgery - Types of procedures, doctors, insurance, grant for funding</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    HRT - How to guide & safety
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Surgery - Types of procedures, doctors, insurance, grant for funding
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
@@ -105,17 +161,41 @@ If you would like to add something to this list, please @Pongo on discord.
             <ol>
                 <li><h5 style="margin: 0px;">Trace app for tracking transition</h5></li>
             </ol>
-            <li><h4 style="margin: 0px;">Trans fem</h4></li>
-            <li><h4 style="margin: 0px;">Nonbinary</h4></li>
-            <li><h4 style="margin: 0px;">Books on lgbt, books for kids</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Trans fem
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Nonbinary
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Books on lgbt, books for kids
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
         <h3 style="margin: 0px;">Periods - monthly cycle</h3>
         <ol>
-            <li><h4 style="margin: 0px;">Period tracking app, OBGYNs</h4></li>
-            <li><h4 style="margin: 0px;">Trans masc cycles</h4></li>
-            <li><h4 style="margin: 0px;">Trans fem have periods too!</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Period tracking app, OBGYNs
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Trans masc cycles
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Trans fem have periods too!
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
@@ -126,49 +206,178 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">General LGBT organizations</h3>
+        <h3 style="margin: 0px;">
+            <a href="./general_lgbt_organizations.html">
+                General LGBT organizations
+            </a> 
+        </h3>
         <ol>
-            <li><h4 style="margin: 0px;">Links to organizations worldwide for events & help</h4></li>
-            <li><h4 style="margin: 0px;">LGBT Swimsuits and Underwear brands</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country">
+                        Links to organizations worldwide for events & help
+                    </a> 
+                </h4>
+                <ol>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_us">
+                                US
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_uk">
+                                UK
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_nz">
+                                New Zealand
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_au">
+                                Australia
+                            </a> 
+                        </h5>
+                    </li>
+                    <li>
+                        <h5 style="margin: 0px;">
+                            <a href="./general_lgbt_organizations.html#lgbt_orgs_by_country_dn">
+                                Denmark
+                            </a> 
+                        </h5>
+                    </li>
+                </ol>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    <a href="./general_lgbt_organizations.html#lgbt_swim_and_under_wear">
+                        LGBT Swimsuits and Underwear brands
+                    </a> 
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
         <h3 style="margin: 0px;">Trans Masc Specific Resources</h3>
         <ol>
-            <li><h4 style="margin: 0px;">Binding</h4></li>
-            <li><h4 style="margin: 0px;">Packing</h4></li>
-            <li><h4 style="margin: 0px;">STPs</h4></li>
-            <li><h4 style="margin: 0px;">Clothing,Shoes,Hair,etc</h4></li>
-            <li><h4 style="margin: 0px;">Surgery & Grants for funding</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Binding
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Packing
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    STPs
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Clothing,Shoes,Hair,etc
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Surgery & Grants for funding
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
         <h3 style="margin: 0px;">Periods</h3>
         <ol>
-            <li><h4 style="margin: 0px;">Tracking apps</h4></li>
-            <li><h4 style="margin: 0px;">Info & support for afab folks</h4></li>
-            <li><h4 style="margin: 0px;">Why every trans person needs an OBGYN</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Tracking apps
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Info & support for afab folks
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Why every trans person needs an OBGYN
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
         <h3 style="margin: 0px;">Lgbt Pregnancy and parenting</h3>
         <ol>
-            <li><h4 style="margin: 0px;">Queer parenting links</h4></li>
-            <li><h4 style="margin: 0px;">Can trans men get pregnant/prevention </h4></li>
-            <li><h4 style="margin: 0px;">Chest feeding for trans masc & trans fem</h4></li>
-            <li><h4 style="margin: 0px;">Trans parenting in media</h4></li>
-            <li><h4 style="margin: 0px;">Parenting a trans kid</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Queer parenting links
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Can trans men get pregnant/prevention 
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Chest feeding for trans masc & trans fem
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Trans parenting in media
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Parenting a trans kid
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
         <h3 style="margin: 0px;">Trans Fem specific resources</h3>
         <ol>
-            <li><h4 style="margin: 0px;">Guides</h4></li>
-            <li><h4 style="margin: 0px;">Hair(wigs,laser removal,etc)</h4></li>
-            <li><h4 style="margin: 0px;">Makeup(beginner guide)</h4></li>
-            <li><h4 style="margin: 0px;">Body(clothes,workouts,tucking,etc)</h4></li>
-            <li><h4 style="margin: 0px;">Chest(bra size guide)</h4></li>
-            <li><h4 style="margin: 0px;">Surgery & Grants for funding</h4></li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Guides
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Hair(wigs,laser removal,etc)
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Makeup(beginner guide)
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Body(clothes, workouts, tucking, etc)
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Chest(bra size guide)
+                </h4>
+            </li>
+            <li>
+                <h4 style="margin: 0px;">
+                    Surgery & Grants for funding
+                </h4>
+            </li>
         </ol>
     </li>
     <li>
