--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@ If you would like to add something to this list, please @Pongo on discord.
         </ol>
     </li>
     <li>
-        <h3 style="margin: 0px;">Socially Transitioning</h3> 
+        <h3 style="margin: 0px;">
+<a href="./Socially Transitioning</h3> 
         <ol> 
             <li><h4 style="margin: 0px;">Passing</h4></li>
             <li><h4 style="margin: 0px;">Positivity and Hope</h4></li>
